completed header component

--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson</title>
-    
-    <link rel="stylesheet" href="./assets/css/style.css">
+
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
-    
+    <header class="header fixed" style="--top-stickey:-28px">
+        <div class="content">
+            <div class="header-logo">
+                <a href="#!">
+                    <img src="./assets/img/logo.svg" alt="Lesson" class="logo">
+                </a>
+            </div>
+            <nav>
+                <ul class="nav-list">
+                    <li class="nav-item active">
+                        <a href="#!" class="link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#!" class="link">Courses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#!" class="link">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#!" class="link">Reviews</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#!" class="link btn btn-primary">Sign Up</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
+
 </html>
